# Mediapipe-FMA

./: .gitignore  README.md  build.py  main.py  pyproject.toml
config/: fugl_meyer_tests.json  settings.py
core/: assessment_session.py  data_capture.py  exercise_interface.py  pose_detector.py  pose_evaluator.py  results_manager.py  run_exercise.py
core/exercises/: a2_exercises.py  a3_exercises.py  a4_exercises.py  base.py  factory.py
docs/: uml_diagram.puml
src/: __init__.py  test_processor.py
src/config/: fugl_meyer_tests.json  landmarks.py  settings.py
src/core/: assessment_session.py  pose_detector.py  pose_evaluator.py  results_manager.py
src/exercises/base/: base_exercise.py
src/exercises/criteria/: exercise_criteria.py
src/exercises/factory/: exercise_factory.py
src/exercises/implementations/a2/: exercises.py
src/exercises/implementations/a3/: exercises.py
src/exercises/implementations/a4/: exercises.py
src/exercises/implementations/c/: exercises.py
src/exercises/implementations/d/: exercises.py
src/gui/: __init__.py  exercise_interface.py  results_interface.py
src/utils/: angle_utils.py  file_utils.py  pose_visualization.py
tests/: run_tests.py  test_exercises.py
utils/: angle_utils.py  file_utils.py
