[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediapipe-fma"
version = "0.1.0"
description = "Fugl Meyer Assessment using MediaPipe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "PyQt6>=6.6.1",
    "numpy>=1.26.3",
    "opencv-python>=4.9.0.80",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "config", "exercises", "gui", "utils"]
